create login controller && login/new.html.erb, add bcrypt to gemfile and run bundle, add login to routes.

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -4,14 +4,17 @@
       <%= err_msg %>
     <% end %>
   <% end %>
-  
+
 
   <%= form_for @user do |f| %>
     <%= f.label :name %>
     <%= f.text_field :name %><br />
 
-    <%= f.label :email %>
-    <%= f.text_field :email %><br />
+    <%= f.label :password %>
+    <%= f.text_field :password %><br />
+
+    <%= f.label :password_confirmation %>
+    <%= f.text_field :password_confirmation %><br />
 
     <%= f.submit %>
   <% end %>
