create auth for logins, edit user show page to add links to logout, all developers.

--- a/app/views/login/new.html.erb
+++ b/app/views/login/new.html.erb
@@ -6,10 +6,7 @@
   <%= text_field_tag :name %><br />
 
   <%= label_tag :password %>
-  <%= text_field_tag :password %><br />
-
-  <%= label_tag :password_digest %>
-  <%= text_field_tag :password_digest %><br />
+  <%= password_field_tag :password %><br />
 
   <%= submit_tag "login" %>
 <% end %>
