--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,8 +1,10 @@
 
   <% if flash[:errors] %>
-    <% flash[:errors].each do |err_msg| %>
-      <%= err_msg %>
-    <% end %>
+    <ul>
+      <% flash[:errors].each do |err_msg| %>
+        <li><%= err_msg %></li>
+      <% end %>
+    </ul>
   <% end %>
 
 
@@ -11,10 +13,10 @@
     <%= f.text_field :name %><br />
 
     <%= f.label :password %>
-    <%= f.text_field :password %><br />
+    <%= f.password_field :password %><br />
 
     <%= f.label :password_confirmation %>
-    <%= f.text_field :password_confirmation %><br />
+    <%= f.password_field :password_confirmation %><br />
 
     <%= f.submit %>
   <% end %>
