--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,7 +1,3 @@
 <h1>Update a Project</h1>
 
-<%= form_for @project do |f|%>
-<%= f.label :name %>
-<%= f.text_field :name %>
-<%= f.submit "UPDATE" %>
-<% end %>
+<%= render "form" %>
