--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,13 +1,3 @@
 <h1>Create a new Project</h1>
 
-<% if flash[:errors] %>
-<% flash[:errors].each do |error| %>
-<%= error %>
-<% end %>
-<% end %>
-
-<%= form_for @project do |f|%>
-<%= f.label :name %>
-<%= f.text_field :name %>
-<%= f.submit "CREATE" %>
-<% end %>
+<%= render "form" %>
