--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,1 +1,15 @@
 <h1>This is <%= @project.name %></h1>
+
+
+<p> owned by: <%= link_to @project.user.name, user_path(@project.user) %></p>
+
+<% if @project.developers.count != 0 %>
+<ol>
+  <h3>Developers working on this Project:</h3>
+  <% @project.developers.each do |developer| %>
+    <li><%= link_to developer.name, developer_path(developer) %></li>
+  <% end %>
+</oll>
+<% end %>
+
+<%= link_to "build team", new_team_path %> for this project
