added skills to seeds.rb, built skillsets_controller

--- a/app/views/developers/show.html.erb
+++ b/app/views/developers/show.html.erb
@@ -4,7 +4,7 @@
 
 <h3>Skills</h3>
 
-<p><%= link_to "add skill", new_skill_path %></p>
+<p><%= link_to "add skill", new_skillset_path %></p>
 
 
 <p><%= link_to "home", user_path(@current_user) %></p>
