edit link on skillsets/new.html.erb

--- a/app/views/skillsets/new.html.erb
+++ b/app/views/skillsets/new.html.erb
@@ -1,6 +1,8 @@
 
 
 <%= form_for @skillset do |f| %>
+  <%= f.hidden_field :developer, @developer.id %>
+
   <%= f.label :skill %>
   <%= f.collection_select :skill_id,  @skills, :id, :name %><br />
 
