--- a/app/views/developers/_form.html.erb
+++ b/app/views/developers/_form.html.erb
@@ -1,6 +1,17 @@
+<!doctype html>
 
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
 
-<%= form_for @developer do |f| %>
+<body>
+  <div class="main">
+    <div class="box">
+
+  <%= form_for @developer do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %><br />
 
@@ -12,3 +23,8 @@
 
   <%= f.submit %>
 <% end %>
+
+    </div>
+  </div>
+</body>
+</html>
