--- a/app/views/developers/index.html.erb
+++ b/app/views/developers/index.html.erb
@@ -1,7 +1,21 @@
-<h1 align="center">Developers</h1>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
 
-<ol>
+<body>
+<div class="main">
+<div class="box">
+<h1>Developers</h1>
+
   <% @developers.each do |developer| %>
-    <li><%= link_to developer.name, developer %></li>
+    <button type="button" class="btn btn-outline-warning"><%= link_to developer.name, developer %></button><br><br>
   <% end %>
-</ol>
+
+</div>
+</div>
+</body>
+</html>
