--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,15 +1,35 @@
-<h1>This is <%= @project.name %></h1>
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
+
+<body>
+<div class="main">
+<div class="box">
+<h1>This is <%= @project.name %> project</h1>
 
 
-<p> owned by: <%= link_to @project.user.name, user_path(@project.user) %></p>
+<p> Owned by: <%= link_to @project.user.name, user_path(@project.user) %></p>
 
 <% if @project.developers.count != 0 %>
-<ol>
   <h3>Developers working on this Project:</h3>
+  <div class="grid-container">
   <% @project.developers.each do |developer| %>
-    <li><%= link_to developer.name, developer_path(developer) %></li>
+    <div class="grid-item">
+    <button type="button" class="btn btn-outline-warning"><%= link_to developer.name, developer_path(developer) %></button><br><br>
+    <img src="<%= developer.img_url %>" alt="">
+    <div>
   <% end %>
-</oll>
+  <div>
 <% end %>
 
-<%= link_to "build team", new_team_path %> for this project
+<button type="button" class="btn btn-outline-warning"><%= link_to "Add Developer", new_team_path %></button><br><br>
+
+</div>
+</div>
+</body>
+</html>
