--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,32 @@
-<h1 align="center"><%= @current_user.name %></h1>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
+
+<body>
+<div class="main">
+<div class="box">
+    <h1><%= @current_user.name %></h1>
 
 
-<center>
-  <% if @user.projects.count == 0 %>
-    <p>You have no projects with us at the moment</p>
-  <% else %>
-    <h3>These are the projects you have so far</h3>
-      <% @user.projects.each do |project| %>
-        <p><%= link_to project.name, project_path(project) %></p>
+      <% if @user.projects.count == 0 %>
+        <p>You have no projects with us at the moment</p>
+      <% else %>
+        <h3>These are the projects you have so far</h3>
+          <% @user.projects.each do |project| %>
+            <button type="button" class="btn btn-outline-warning"><%= link_to project.name, project_path(project) %></button><br><br>
+          <% end %>
       <% end %>
-  <% end %>
 
-  <p><%= link_to "create a project", new_project_path %></p>
+    <button type="button" class="btn btn-secondary btn-sm"><%= link_to "Create a Project", new_project_path %></button><br>
+    <br>
+    <button type="button" class="btn btn-secondary btn-sm"><%= link_to "See all Developers", developers_path %></button><br>
 
-<p><%= link_to "See all Developers", developers_path %></p>
-
-
-<p><%= button_to "logout", "/logout", method: :delete %></p>
-
-</center>
+    <p><%= button_to "logout", "/logout", method: :delete %></p>
+</div>
+</div>
+</body>
+</html>
