add developer to projects

--- a/app/views/developers/show.html.erb
+++ b/app/views/developers/show.html.erb
@@ -6,5 +6,5 @@
 
 <p><%= link_to "add skill", new_skillset_path %></p>
 
-
+<p><%= link_to "back", developers_path %></p>
 <p><%= link_to "home", user_path(@current_user) %></p>
