--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,26 +8,24 @@
 </head>
 
 <body>
-<div class="main">
-<div class="box">
-<h1>This is <%= @project.name %> project</h1>
+<div class="">
+<div class="box-project-show">
 
+  <div class="box-project-show-header">
+    <h1>This is <%= @project.name %> project</h1>
+    <p> Owned by: <%= link_to @project.user.name, user_path(@project.user) %></p>
+    <h2>Team:</h2>
+    <button type="button" class="btn btn-outline-warning"><%= link_to "Add Developer", new_team_path %></button><br><br>
+  </div>
 
-<p> Owned by: <%= link_to @project.user.name, user_path(@project.user) %></p>
-
-<% if @project.developers.count != 0 %>
-  <h3>Developers working on this Project:</h3>
   <div class="grid-container">
-  <% @project.developers.each do |developer| %>
-    <div class="grid-item">
-    <button type="button" class="btn btn-outline-warning"><%= link_to developer.name, developer_path(developer) %></button><br><br>
-    <img src="<%= developer.img_url %>" alt="">
-    <div>
-  <% end %>
+    <% @project.developers.each do |developer| %>
+      <div class="grid-item">
+        <img src="<%= developer.img_url %>" alt=""> <br>
+        <button type="button" class="btn btn-outline-warning"><%= link_to developer.name, developer %></button>
+      </div>
+    <% end %>
   <div>
-<% end %>
-
-<button type="button" class="btn btn-outline-warning"><%= link_to "Add Developer", new_team_path %></button><br><br>
 
 </div>
 </div>
