--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!doctype html>
 
 <html lang="en">
@@ -9,51 +8,41 @@
 </head>
 
 <body>
-<div class="main">
-<div class="box">
-<h1>This is <%= @project.name %> project</h1>
+  <div class="main">
+    <div class="box">
+    <h1>This is <%= @project.name %> project</h1>
 
 
-<p> Owned by: <%= link_to @project.user.name, user_path(@project.user) %></p>
+    <% if @project.developers.count != 0 %>
+      <h3>Developers working on this Project:</h3>
+      <div class="grid-container">
+        <% @project.developers.each do |developer| %>
 
+          <div class="grid-item">
+          <button type="button" class="btn btn-outline-warning"><li><%= link_to developer.name, developer_path(developer) %> - <%= link_to "remove", remove_developer_path(developer, @project), method: :delete%></li></button><br><br>
 
-<% if @project.developers.count != 0 %>
-  <h3>Developers working on this Project:</h3>
-  <div class="grid-container">
-  <% @project.developers.each do |developer| %>
+          <img src="<%= developer.img_url %>" alt="">
+          <div>
+        <% end %>
 
-    <div class="grid-item">
-    <button type="button" class="btn btn-outline-warning"><%= link_to developer.name, developer_path(developer) %></button><br><br>
-    <img src="<%= developer.img_url %>" alt="">
-    <div>
-  <% end %>
-  <div>
-<% end %>
+        <form action="/jobs/new" method="get">
+            <input type="hidden" name="project_id" value= "<%= @project.id %>">
+            <input type="submit" value="Add More Developers">
+        </form>
+    <% else %>
+          <p>You have no developers working on this project</p>
 
-
-</div>
-</div>
+          <form action="/jobs/new" method="get">
+              <input type="hidden" name="project_id" value= "<%= @project.id %>">
+              <input type="submit" value="Add Developer">
+          </form>
+    <% end %>
+      <div>
+    </div>
+  </div>
 </body>
 </html>
 
-    <li><%= link_to developer.name, developer_path(developer) %> - <%= link_to "remove", developer_path(developer), method: :delete%></li>
-  <% end %>
-  <p>Add more Developers to this project</p>
-
-  <form action="/jobs/new" method="get">
-      <input type="hidden" name="project_id" value= "<%= @project.id %>">
-      <input type="submit" value="Add Member">
-  </form>
-</ol>
-<% else %>
-  <p>You have no developers working on this project</p>
-  <p>Assign some below</p>
-
-  <form action="/jobs/new" method="get">
-      <input type="hidden" name="project_id" value= "<%= @project.id %>">
-      <input type="submit" value="Add Member">
-  </form>
-<% end %>
 
 <p><%= button_to "delete this project", project_path(@project), method: :delete %></p>
 
