add update to project

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -43,7 +43,7 @@
 </body>
 </html>
 
-
+<p><%= link_to "update project", edit_project_path(@project) %></p>
 <p><%= button_to "delete this project", project_path(@project), method: :delete %></p>
 
 
