--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -24,10 +24,6 @@
   overflow-y: scroll;
 }
 
-.box-project-show {
-
-}
-
 .grid-container {
   display: grid;
   grid-template-columns: 300px 300px 300px 300px;
@@ -36,7 +32,22 @@
   grid-row-gap: 20px;
 }
 
-.box-project-show-header {
+.box_project_show_header {
 text-align: center;
 // color: white;
+}
+
+.box_new_project {
+  background-color: grey;
+  padding: 5px;
+  height: 680px;
+  width: 300px;
+  text-align: center;
+  margin: 0px auto;
+  overflow-y: scroll;
+  padding-top: 300px;
+}
+
+.box_project_show {
+  
 }
