--- a/app/views/developers/index.html.erb
+++ b/app/views/developers/index.html.erb
@@ -17,7 +17,7 @@
 
 
 
-  <%= link_to "home", user_path(@current_user) %>
+  <button type="button" class="btn btn-warning"><%= link_to "Home", user_path(@current_user) %></button>
 </div>
 </div>
 </body>
