--- a/app/views/login/new.html.erb
+++ b/app/views/login/new.html.erb
@@ -11,9 +11,8 @@
 <div class="main">
 
   <div class="gradient">
-    <div class="loginbox">
+    <div class="loginbox_login">
       <h3>Wellcome to Developedia</h3>
-      <h5>Log In</h5>
       <img src="" alt="">
       <%= form_tag "/login" do %>
       <%= text_field_tag :name %><br />
