--- a/app/views/users/root.html.erb
+++ b/app/views/users/root.html.erb
@@ -1,8 +1,25 @@
-<h1 align="center">Welcome to Developedia</h1>
+<!doctype html>
+<html lang="en">
+<head>
 
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-<center>
-    <p><%= link_to "LOGIN", login_path %></p>
+</head>
 
-    <p><%= link_to "SIGN UP", new_user_path %></p>
-</center>
+<body>
+
+  <div class="main">
+    <div class="gradient">
+      <div class="loginbox_root">
+        <h3>Welcome to Developedia</h3>
+        <p><%= link_to "LOGIN", login_path %></p>
+        <p><%= link_to "SIGN UP", new_user_path %></p>
+        </div>
+      </div>
+    <div class="picture"></div>
+  </div>
+
+</body>
+</html>
