--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!doctype html>
 
 <html lang="en">
@@ -16,8 +15,8 @@
 <% @projects.each do |project| %>
 <button type="button" class="btn btn-outline-warning"><%= link_to project.name, project %></button><br><br>
 <% end %>
-  <p align="center"><%= link_to "add another project", new_project_path %></p>
-  
+<button type="button" class="btn btn-warning"><%= link_to "Add another project", new_project_path %></button><br><br>
+
 </div>
 </div>
 </body>
