--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,14 +8,16 @@
 </head>
 
 <body>
-<div class="">
-<div class="box-project-show">
+<div class="main">
+<div class="box_project_show">
 
-  <div class="box-project-show-header">
+  <div class="box_project_show_header">
     <h1>This is <%= @project.name %> project</h1>
     <p> Owned by: <%= link_to @project.user.name, user_path(@project.user) %></p>
     <h2>Team:</h2>
-    <button type="button" class="btn btn-outline-warning"><%= link_to "Add Developer", new_team_path %></button><br><br>
+    <button type="button" class="btn btn-outline-warning"><%= link_to "Add Developer", new_job_path %></button><br><br>
+    <button type="button" class="btn btn-outline-warning"><%= link_to "All your projects", projects_path %></button><br><br>
+    <button type="button" class="btn btn-outline-warning"><%= button_to "Delete this project", project_path(@project), method: :delete %></button><br><br>
   </div>
 
   <div class="grid-container">
@@ -26,29 +28,6 @@
       </div>
     <% end %>
   <div>
-
-    <p><%= button_to "delete this project", project_path(@project), method: :delete %></p>
-
-
-    <%= link_to "all your projects", projects_path %>
-
-    <p>Add more Developers to this project</p>
-
-    <form action="/jobs/new" method="get">
-        <input type="hidden" name="project_id" value= "<%= @project.id %>">
-        <input type="submit" value="Add Member">
-    </form>
-
-  <% else %>
-    <p>You have no developers working on this project</p>
-    <p>Assign some below</p>
-
-    <form action="/jobs/new" method="get">
-        <input type="hidden" name="project_id" value= "<%= @project.id %>">
-        <input type="submit" value="Add Member">
-    </form>
-  <% end %>
-
 </div>
 </div>
 </body>
