--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -20,7 +20,13 @@
 
           <div class="grid-item">
           <button type="button" class="btn btn-outline-warning"><li><%= link_to developer.name, developer_path(developer) %> - <%= link_to "remove", remove_developer_path(developer, @project), method: :delete%></li></button><br>
-          <%= link_to "review developer", new_review_path %>
+
+          <form action="/reviews/new" method="get">
+              <input type="hidden" name="developer_id" value= "<%= developer.id %>">
+              <input type="hidden" name="user_id" value= "<%= @current_user.id %>">
+              <input type="submit" value="review developer">
+          </form>
+
           <img src="<%= developer.img_url %>" alt="">
           <div>
         <% end %>
