--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -10,7 +10,7 @@
 <body>
   <div class="main">
     <div class="box">
-    <h1>This is <%= @project.name %> project</h1>
+    <h1><%= @project.name %></h1>
 
 
     <% if @project.developers.count != 0 %>
