--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -4,6 +4,8 @@
 <%= form_for @review do |f| %>
   <%= f.label :content %>
   <%= f.text_field :content %><br />
+  <%= f.label :rating %>
+  <%= f.number_field :rating %><br />
   <%= f.hidden_field :user_id, value: @user.id %>
   <%= f.hidden_field :developer_id, value: @developer.id %>
 
