--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,12 @@
 <h2 align="center">review <%= @developer.name %></h2>
 
 
+<% if flash[:errors] %>
+  <% flash[:errors].each do |err_msg| %>
+    <%= err_msg %>
+  <% end %>
+<% end %>
+
 <%= form_for @review do |f| %>
   <%= f.label :content %>
   <%= f.text_field :content %><br />
