--- a/app/views/developers/show.html.erb
+++ b/app/views/developers/show.html.erb
@@ -22,6 +22,8 @@
         <% end %>
       </ul>
 
+      <p>Total Skills: <%= @developer.total_skills%></p>
+
     <form action="/skillsets/new" method="get">
         <input type="hidden" name="developer_id" value= "<%= @developer.id %>">
         <input type="submit" value="Add Skill">
