--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -11,6 +11,7 @@
   <div class="main">
     <div class="box">
     <h1><%= @project.name %></h1>
+    <h3><%= @project.project_length%></h3>
 
 
     <% if @project.developers.count != 0 %>
