--- a/app/assets/stylesheets/skills.scss
+++ b/app/assets/stylesheets/skills.scss
@@ -17,3 +17,31 @@
   margin: 5px auto;
   overflow-y: scroll;
 }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+.test {
+  align-items: center;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
