--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,26 @@
 </head>
 
 <body>
+
+  <ul class='test'>
+    <li>
+      <%= link_to "All Developers", developers_path%>
+    </li>
+    <li>
+      <%= link_to "All Projects", projects_path %>
+    </li>
+    <li>
+      <%= link_to "All Skills", skills_path%>
+    </li>
+    <li>
+      <%= link_to "Create a Project", new_project_path %>
+    </li>
+    <li>
+      <%= button_to "logout", "/logout", method: :delete %>
+    </li>
+  </ul>
+
+
 <div class="main">
 <div class="box">
     <h1><%= @current_user.name %></h1>
@@ -22,13 +42,6 @@
           <% end %>
       <% end %>
 
-    <button type="button" class="btn btn-warning"><%= link_to "Create a Project", new_project_path %></button><br>
-    <br>
-    <button type="button" class="btn btn-warning"><%= link_to "See all Developers", developers_path %></button><br>
-    <br>
-    <button type="button" class="btn btn-warning"><%= link_to "See all Project", projects_path %></button><br>
-    <br>
-    <button type="button" class="btn btn-warning"><%= button_to "logout", "/logout", method: :delete %></button><br>
 </div>
 </div>
 </body>
