--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .main {
-  background-image: url(https://i.pinimg.com/originals/b7/46/43/b74643cbbe7d68c54554544ec50cf999.jpg);
+  background-image: url(https://i.pinimg.com/originals/71/3d/75/713d750e34eecdaad099c01138e41a0c.gif);
   background-size: cover;
   filter: blur();
 }
