--- a/app/views/developers/_form.html.erb
+++ b/app/views/developers/_form.html.erb
@@ -8,6 +8,31 @@
 </head>
 
 <body>
+
+  <ul class='test'>
+    <div class="navbar">
+    <div class="">
+    <li>
+      <%= link_to "All Developers", developers_path%>
+    </li>
+    <li>
+      <%= link_to "All Projects", projects_path %>
+    </li>
+    <li>
+      <%= link_to "All Skills", skills_path%>
+    </li>
+    <li>
+      <%= link_to "Create a Project", new_project_path %>
+    </li>
+      </div>
+      <div class="">
+    <li>
+      <%= button_to "logout", "/logout", method: :delete %>
+    </li>
+  </div>
+  </div>
+  </ul>
+  
   <div class="main">
     <div class="box">
 
